fixed the misaligned logo in the navigation

--- a/assets/css/sass/_base.scss
+++ b/assets/css/sass/_base.scss
@@ -88,7 +88,6 @@ section {
 
 .navbar-brand>img {
     display: inline;
-    vertical-align: top;
 }
 
 #mainNav {
